--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <li class="list-group-item"><strong>Address:</strong> Dullu-7, Dailekh, Karnali Province, Nepal</li>
                     <li class="list-group-item"><strong>Date of Birth:</strong> 2047-10-21 BS</li>
                     <li class="list-group-item"><strong>Nationality:</strong> Nepali</li>
-                    <li class="list-group-item"><strong>Email:</strong> nirajan@example.com</li>
-                    <li class="list-group-item"><strong>Phone:</strong> +977-98XXXXXXXX</li>
+                    <li class="list-group-item"><strong>Email:</strong> nirajanhamal@gmail.com </li>
+                    <li class="list-group-item"><strong>Phone:</strong> +977-9858052304</li>
                 </ul>
             </div>
         </div>
