--- a/index.html
+++ b/index.html
@@ -1,27 +1,126 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nirajan Hamal - Information</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <div class="card mx-auto" style="max-width: 500px;">
-            <div class="card-header bg-primary text-white">
-                <h3 class="mb-0">Nirajan Hamal</h3>
-            </div>
-            <div class="card-body">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><strong>Address:</strong> Dullu-7, Dailekh, Karnali Province, Nepal</li>
-                    <li class="list-group-item"><strong>Date of Birth:</strong> 2047-10-21 BS</li>
-                    <li class="list-group-item"><strong>Nationality:</strong> Nepali</li>
-                    <li class="list-group-item"><strong>Email:</strong> nirajanhamal@gmail.com </li>
-                    <li class="list-group-item"><strong>Phone:</strong> +977-9858052304</li>
-                </ul>
-            </div>
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nirajan Hamal | Welcome</title>
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  </head>
+  <body>
+
+    <div class="off-canvas-wrapper">
+      <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
+
+        <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
+          <div class="row column">
+            <br>
+            <img class="thumbnail" src="img/user.png">
+            <h5>Nirajan Hamal</h5>
+            <p>Nirajan Hamal is a passionate programmer skilled in Python and PHP, dedicated to building efficient and innovative solutions. With a strong foundation in software development, he enjoys tackling challenging problems and continuously expanding his technical expertise.</p>
+          </div>
         </div>
+
+        <div class="off-canvas-content" data-off-canvas-content>
+          <div class="title-bar hide-for-large">
+            <div class="title-bar-left">
+              <button class="menu-icon" type="button" data-open="my-info"></button>
+              <span class="title-bar-title">Mike Mikerson</span>
+            </div>
+          </div>
+          <div class="callout primary">
+            <div class="row column">
+              <h1>Hello! This is the portfolio of a very witty person.</h1>
+                <p class="lead">Welcome to my portfolio website. Explore my projects and get to know more about my work and skills.</p>
+            </div>
+          </div>
+          <div class="row small-up-2 medium-up-3 large-up-4">
+            <div class="column">
+              <img class="thumbnail" src="img/github.png">
+              <h5>GitHub Profile</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="img/facebook.webp">
+              <h5>Facebook Profile</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+            <div class="column">
+              <img class="thumbnail" src="https://placehold.it/550x550">
+              <h5>My Site</h5>
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="row">
+            <div class="medium-6 columns">
+              <h3>Contact Me</h3>
+              <p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+              <ul class="menu">
+                <li><a href="#">Dribbble</a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Yo</a></li>
+              </ul>
+            </div>
+            <div class="medium-6 columns">
+              <label>Name
+                <input type="text" placeholder="Name">
+              </label>
+              <label>Email
+                <input type="text" placeholder="Email">
+              </label>
+              <label>
+                Message
+                <textarea placeholder="holla at a designerd"></textarea>
+              </label>
+              <input type="submit" class="button expanded" value="Submit">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
 </html>
+
+
+
