--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   </head>
   <body>
-
+Testing Purpose ....
     <div class="off-canvas-wrapper">
       <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 
@@ -43,43 +43,43 @@
               <h5>Facebook Profile</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/linkedin.jpg">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/insta.webp">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/l1.png">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/l2.webp">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/p1.png">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/p2.png">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/p3.jpg">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/p4.avif">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/p5.png">
               <h5>My Site</h5>
             </div>
             <div class="column">
-              <img class="thumbnail" src="https://placehold.it/550x550">
+              <img class="thumbnail" src="img/e1.webp">
               <h5>My Site</h5>
             </div>
           </div>
